feature: handle deep relationships