@@ -3,7 +3,7 @@ package io.morin.archicode.cli;
 import io.quarkus.test.junit.QuarkusTest;
 import jakarta.inject.Inject;
 import java.nio.file.Path;
-import java.util.Collections;
+import java.util.Set;
 import org.junit.jupiter.api.Test;
 
 @QuarkusTest
@@ -20,7 +20,13 @@ class CustomRenderingTest {
         renderCommand.viewsDirPath = Path.of("views");
         renderCommand.rendererName = "plantuml";
         if (archiCodeCommand.workspaceFilePath.toFile().exists()) {
-            renderCommand.renderViews(Collections.emptySet());
+            renderCommand.renderViews(
+                Set.of(
+                    "reference.cloudprovider.cluster.authx.backend_deep",
+                    "reference.cloudprovider.cluster.authx.backend_detailed",
+                    "reference.cloudprovider.cluster.authx.backend_overview"
+                )
+            );
         }
     }
 }
